<resources>
    <string name="app_name">Kuat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_charts">charts</string>
    <string name="back">Back</string>
    <string name="xaxis">xAxis</string>
    <string name="yaxis">yAxis</string>
    <string name="_100">100</string>
    <string name="speed">Speed</string>
    <string name="tg_month">tg/month</string>
    <string name="help">Helpers</string>
    <string name="power">Power</string>
    <string name="time">Время</string>
    <string name="title_activity_meters_list">MetersListActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text">some_text</string>
</resources>
